K1J-1975: Apply Spotless code formatting