@@ -1,3 +1,21 @@
+/*
+ * Copyright (C) 2026 Inera AB (http://www.inera.se)
+ *
+ * This file is part of sklintyg (https://github.com/sklintyg).
+ *
+ * sklintyg is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * sklintyg is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
 package se.inera.intyg.certificateservice.infrastructure.certificatemodel.fk7427.schematron;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -45,48 +63,43 @@ import se.inera.intyg.certificateservice.infrastructure.clinicalprocesscertifica
 public class SchematronValidationFK7427Test {
 
   private static final ActionEvaluation ACTION_EVALUATION = ActionEvaluation.builder().build();
-  @Mock
-  private CertificateActionFactory certificateActionFactory;
-  @Mock
-  private DiagnosisCodeRepository diagnosisCodeRepository;
+  @Mock private CertificateActionFactory certificateActionFactory;
+  @Mock private DiagnosisCodeRepository diagnosisCodeRepository;
   private SchematronValidator schematronValidator;
-  private final XmlGeneratorCertificateV4 generator = new XmlGeneratorCertificateV4(
-      new XmlGeneratorValue(
-          List.of(
-              new XmlGeneratorDate(),
-              new XmlGeneratorText(),
-              new XmlGeneratorDateList(),
-              new XmlGeneratorBoolean(),
-              new XmlGeneratorCode(),
-              new XmlGeneratorDiagnosisList(),
-              new XmlGeneratorDateRange()
-          ),
-          Collections.emptyList()
-      ),
-      new XmlValidationService(
-          new SchematronValidator(),
-          new SchemaValidatorV4()
-      )
-  );
+  private final XmlGeneratorCertificateV4 generator =
+      new XmlGeneratorCertificateV4(
+          new XmlGeneratorValue(
+              List.of(
+                  new XmlGeneratorDate(),
+                  new XmlGeneratorText(),
+                  new XmlGeneratorDateList(),
+                  new XmlGeneratorBoolean(),
+                  new XmlGeneratorCode(),
+                  new XmlGeneratorDiagnosisList(),
+                  new XmlGeneratorDateRange()),
+              Collections.emptyList()),
+          new XmlValidationService(new SchematronValidator(), new SchemaValidatorV4()));
 
   private CertificateModelFactoryFK7427 certificateModelFactoryFK7427;
 
   @BeforeEach
   void setUp() {
     schematronValidator = new SchematronValidator();
-    certificateModelFactoryFK7427 = new CertificateModelFactoryFK7427(certificateActionFactory,
-        diagnosisCodeRepository);
+    certificateModelFactoryFK7427 =
+        new CertificateModelFactoryFK7427(certificateActionFactory, diagnosisCodeRepository);
   }
 
   @Test
   void shallReturnTrueForValidCertificate() {
-    final var certificate = TestDataCertificate.fk7427CertificateBuilder()
-        .certificateModel(certificateModelFactoryFK7427.create())
-        .build();
+    final var certificate =
+        TestDataCertificate.fk7427CertificateBuilder()
+            .certificateModel(certificateModelFactoryFK7427.create())
+            .build();
 
     final var xml = generator.generate(certificate, true);
-    assertTrue(schematronValidator.validate(certificate.id(), xml,
-        CertificateModelFactoryFK7427.SCHEMATRON_PATH));
+    assertTrue(
+        schematronValidator.validate(
+            certificate.id(), xml, CertificateModelFactoryFK7427.SCHEMATRON_PATH));
   }
 
   @Nested
@@ -94,50 +107,58 @@ public class SchematronValidationFK7427Test {
 
     @Test
     void shallReturnFalseIfMissingValues() {
-      final var certificate = TestDataCertificate.fk7427CertificateBuilder()
-          .certificateModel(certificateModelFactoryFK7427.create())
-          .build();
+      final var certificate =
+          TestDataCertificate.fk7427CertificateBuilder()
+              .certificateModel(certificateModelFactoryFK7427.create())
+              .build();
 
-      final var element = certificate.elementData().stream()
-          .filter(elementData -> elementData.id().equals(new ElementId("1")))
-          .findFirst()
-          .orElseThrow();
+      final var element =
+          certificate.elementData().stream()
+              .filter(elementData -> elementData.id().equals(new ElementId("1")))
+              .findFirst()
+              .orElseThrow();
 
       final var value = (ElementValueDateList) element.value();
       final var elementData = element.withValue(value.withDateList(Collections.emptyList()));
 
-      final var updatedElementData = certificate.elementData().stream()
-          .map(data -> data.id().equals(new ElementId("1")) ? elementData : data)
-          .toList();
+      final var updatedElementData =
+          certificate.elementData().stream()
+              .map(data -> data.id().equals(new ElementId("1")) ? elementData : data)
+              .toList();
       certificate.updateData(updatedElementData, new Revision(0), ACTION_EVALUATION);
 
       final var xml = generator.generate(certificate, false);
-      assertFalse(schematronValidator.validate(certificate.id(), xml,
-          CertificateModelFactoryFK7427.SCHEMATRON_PATH));
+      assertFalse(
+          schematronValidator.validate(
+              certificate.id(), xml, CertificateModelFactoryFK7427.SCHEMATRON_PATH));
     }
 
     @Test
     void shallReturnFalseIfMultipleOccurences() {
-      final var certificate = TestDataCertificate.fk7427CertificateBuilder()
-          .certificateModel(certificateModelFactoryFK7427.create())
-          .build();
+      final var certificate =
+          TestDataCertificate.fk7427CertificateBuilder()
+              .certificateModel(certificateModelFactoryFK7427.create())
+              .build();
 
-      final var element = certificate.elementData().stream()
-          .filter(elementData -> elementData.id().equals(new ElementId("1")))
-          .findFirst()
-          .orElseThrow();
+      final var element =
+          certificate.elementData().stream()
+              .filter(elementData -> elementData.id().equals(new ElementId("1")))
+              .findFirst()
+              .orElseThrow();
 
       final var value = (ElementValueDateList) element.value();
       final var elementData = element.withValue(value);
 
-      final var updatedElementData = certificate.elementData().stream()
-          .map(data -> !data.id().equals(new ElementId("1")) ? elementData : data)
-          .toList();
+      final var updatedElementData =
+          certificate.elementData().stream()
+              .map(data -> !data.id().equals(new ElementId("1")) ? elementData : data)
+              .toList();
       certificate.updateData(updatedElementData, new Revision(0), ACTION_EVALUATION);
 
       final var xml = generator.generate(certificate, false);
-      assertFalse(schematronValidator.validate(certificate.id(), xml,
-          CertificateModelFactoryFK7427.SCHEMATRON_PATH));
+      assertFalse(
+          schematronValidator.validate(
+              certificate.id(), xml, CertificateModelFactoryFK7427.SCHEMATRON_PATH));
     }
   }
 
@@ -146,35 +167,37 @@ public class SchematronValidationFK7427Test {
 
     @Test
     void shallReturnFalseIfTypeAnnatAndMissingValues() {
-      final var certificate = TestDataCertificate.fk7427CertificateBuilder()
-          .certificateModel(certificateModelFactoryFK7427.create())
-          .build();
+      final var certificate =
+          TestDataCertificate.fk7427CertificateBuilder()
+              .certificateModel(certificateModelFactoryFK7427.create())
+              .build();
 
-      final var element = certificate.elementData().stream()
-          .filter(elementData -> elementData.id().equals(new ElementId("1")))
-          .findFirst()
-          .orElseThrow();
+      final var element =
+          certificate.elementData().stream()
+              .filter(elementData -> elementData.id().equals(new ElementId("1")))
+              .findFirst()
+              .orElseThrow();
 
       final var value = (ElementValueDateList) element.value();
-      final var elementData = element.withValue(
-          value.withDateList(
-              List.of(
-                  ElementValueDate.builder()
-                      .dateId(new FieldId("annat"))
-                      .date(LocalDate.now())
-                      .build()
-              )
-          )
-      );
+      final var elementData =
+          element.withValue(
+              value.withDateList(
+                  List.of(
+                      ElementValueDate.builder()
+                          .dateId(new FieldId("annat"))
+                          .date(LocalDate.now())
+                          .build())));
 
-      final var updatedElementData = certificate.elementData().stream()
-          .map(data -> data.id().equals(new ElementId("1")) ? elementData : data)
-          .toList();
+      final var updatedElementData =
+          certificate.elementData().stream()
+              .map(data -> data.id().equals(new ElementId("1")) ? elementData : data)
+              .toList();
       certificate.updateData(updatedElementData, new Revision(0), ACTION_EVALUATION);
 
       final var xml = generator.generate(certificate, false);
-      assertFalse(schematronValidator.validate(certificate.id(), xml,
-          CertificateModelFactoryFK7427.SCHEMATRON_PATH));
+      assertFalse(
+          schematronValidator.validate(
+              certificate.id(), xml, CertificateModelFactoryFK7427.SCHEMATRON_PATH));
     }
   }
 
@@ -183,35 +206,42 @@ public class SchematronValidationFK7427Test {
 
     @Test
     void shallReturnFalseIfMissingValuesOnBothBarnetsDiagnosAndSymtom() {
-      final var certificate = TestDataCertificate.fk7427CertificateBuilder()
-          .certificateModel(certificateModelFactoryFK7427.create())
-          .build();
+      final var certificate =
+          TestDataCertificate.fk7427CertificateBuilder()
+              .certificateModel(certificateModelFactoryFK7427.create())
+              .build();
 
       final var diagnosisId = new ElementId("58");
       final var symtomId = new ElementId("55");
 
-      final var elements = certificate.elementData().stream()
-          .filter(elementData -> elementData.id().equals(diagnosisId) || elementData.id()
-              .equals(symtomId))
-          .collect(Collectors.toMap(ElementData::id, data -> data));
+      final var elements =
+          certificate.elementData().stream()
+              .filter(
+                  elementData ->
+                      elementData.id().equals(diagnosisId) || elementData.id().equals(symtomId))
+              .collect(Collectors.toMap(ElementData::id, data -> data));
 
       final var valueSymtom = (ElementValueText) elements.get(symtomId).value();
       final var elementDataSymtom = elements.get(symtomId).withValue(valueSymtom.withText(null));
 
       final var valueDiagnosis = (ElementValueDiagnosisList) elements.get(diagnosisId).value();
-      final var elementDataDiagnosis = elements.get(diagnosisId)
-          .withValue(valueDiagnosis.withDiagnoses(Collections.emptyList()));
+      final var elementDataDiagnosis =
+          elements
+              .get(diagnosisId)
+              .withValue(valueDiagnosis.withDiagnoses(Collections.emptyList()));
 
-      final var updatedElementData = certificate.elementData().stream()
-          .map(data -> data.id().equals(diagnosisId) ? elementDataDiagnosis : data)
-          .map(data -> data.id().equals(symtomId) ? elementDataSymtom : data)
-          .toList();
+      final var updatedElementData =
+          certificate.elementData().stream()
+              .map(data -> data.id().equals(diagnosisId) ? elementDataDiagnosis : data)
+              .map(data -> data.id().equals(symtomId) ? elementDataSymtom : data)
+              .toList();
 
       certificate.updateData(updatedElementData, new Revision(0), ACTION_EVALUATION);
 
       final var xml = generator.generate(certificate, false);
-      assertFalse(schematronValidator.validate(certificate.id(), xml,
-          CertificateModelFactoryFK7427.SCHEMATRON_PATH));
+      assertFalse(
+          schematronValidator.validate(
+              certificate.id(), xml, CertificateModelFactoryFK7427.SCHEMATRON_PATH));
     }
   }
 
@@ -220,26 +250,30 @@ public class SchematronValidationFK7427Test {
 
     @Test
     void shallReturnFalseIfMissingValues() {
-      final var certificate = TestDataCertificate.fk7427CertificateBuilder()
-          .certificateModel(certificateModelFactoryFK7427.create())
-          .build();
+      final var certificate =
+          TestDataCertificate.fk7427CertificateBuilder()
+              .certificateModel(certificateModelFactoryFK7427.create())
+              .build();
 
-      final var element = certificate.elementData().stream()
-          .filter(elementData -> elementData.id().equals(new ElementId("59")))
-          .findFirst()
-          .orElseThrow();
+      final var element =
+          certificate.elementData().stream()
+              .filter(elementData -> elementData.id().equals(new ElementId("59")))
+              .findFirst()
+              .orElseThrow();
 
       final var value = (ElementValueText) element.value();
       final var elementData = element.withValue(value.withText(null));
 
-      final var updatedElementData = certificate.elementData().stream()
-          .map(data -> data.id().equals(new ElementId("59")) ? elementData : data)
-          .toList();
+      final var updatedElementData =
+          certificate.elementData().stream()
+              .map(data -> data.id().equals(new ElementId("59")) ? elementData : data)
+              .toList();
       certificate.updateData(updatedElementData, new Revision(0), ACTION_EVALUATION);
 
       final var xml = generator.generate(certificate, false);
-      assertFalse(schematronValidator.validate(certificate.id(), xml,
-          CertificateModelFactoryFK7427.SCHEMATRON_PATH));
+      assertFalse(
+          schematronValidator.validate(
+              certificate.id(), xml, CertificateModelFactoryFK7427.SCHEMATRON_PATH));
     }
   }
 
@@ -248,50 +282,58 @@ public class SchematronValidationFK7427Test {
 
     @Test
     void shallReturnFalseIfMissingValues() {
-      final var certificate = TestDataCertificate.fk7427CertificateBuilder()
-          .certificateModel(certificateModelFactoryFK7427.create())
-          .build();
+      final var certificate =
+          TestDataCertificate.fk7427CertificateBuilder()
+              .certificateModel(certificateModelFactoryFK7427.create())
+              .build();
 
-      final var element = certificate.elementData().stream()
-          .filter(elementData -> elementData.id().equals(new ElementId("62")))
-          .findFirst()
-          .orElseThrow();
+      final var element =
+          certificate.elementData().stream()
+              .filter(elementData -> elementData.id().equals(new ElementId("62")))
+              .findFirst()
+              .orElseThrow();
 
       final var value = (ElementValueText) element.value();
       final var elementData = element.withValue(value.withText(null));
 
-      final var updatedElementData = certificate.elementData().stream()
-          .map(data -> data.id().equals(new ElementId("62")) ? elementData : data)
-          .toList();
+      final var updatedElementData =
+          certificate.elementData().stream()
+              .map(data -> data.id().equals(new ElementId("62")) ? elementData : data)
+              .toList();
       certificate.updateData(updatedElementData, new Revision(0), ACTION_EVALUATION);
 
       final var xml = generator.generate(certificate, false);
-      assertFalse(schematronValidator.validate(certificate.id(), xml,
-          CertificateModelFactoryFK7427.SCHEMATRON_PATH));
+      assertFalse(
+          schematronValidator.validate(
+              certificate.id(), xml, CertificateModelFactoryFK7427.SCHEMATRON_PATH));
     }
 
     @Test
     void shallReturnFalseIfMissingValue() {
-      final var certificate = TestDataCertificate.fk7427CertificateBuilder()
-          .certificateModel(certificateModelFactoryFK7427.create())
-          .build();
+      final var certificate =
+          TestDataCertificate.fk7427CertificateBuilder()
+              .certificateModel(certificateModelFactoryFK7427.create())
+              .build();
 
-      final var element = certificate.elementData().stream()
-          .filter(elementData -> elementData.id().equals(new ElementId("62.1")))
-          .findFirst()
-          .orElseThrow();
+      final var element =
+          certificate.elementData().stream()
+              .filter(elementData -> elementData.id().equals(new ElementId("62.1")))
+              .findFirst()
+              .orElseThrow();
 
       final var value = (ElementValueBoolean) element.value();
       final var elementData = element.withValue(value.withValue(null));
 
-      final var updatedElementData = certificate.elementData().stream()
-          .map(data -> data.id().equals(new ElementId("62.1")) ? elementData : data)
-          .toList();
+      final var updatedElementData =
+          certificate.elementData().stream()
+              .map(data -> data.id().equals(new ElementId("62.1")) ? elementData : data)
+              .toList();
       certificate.updateData(updatedElementData, new Revision(0), ACTION_EVALUATION);
 
       final var xml = generator.generate(certificate, false);
-      assertFalse(schematronValidator.validate(certificate.id(), xml,
-          CertificateModelFactoryFK7427.SCHEMATRON_PATH));
+      assertFalse(
+          schematronValidator.validate(
+              certificate.id(), xml, CertificateModelFactoryFK7427.SCHEMATRON_PATH));
     }
   }
 
@@ -300,87 +342,99 @@ public class SchematronValidationFK7427Test {
 
     @Test
     void shallReturnFalseIfMissingToValue() {
-      final var certificate = TestDataCertificate.fk7427CertificateBuilder()
-          .certificateModel(certificateModelFactoryFK7427.create())
-          .build();
+      final var certificate =
+          TestDataCertificate.fk7427CertificateBuilder()
+              .certificateModel(certificateModelFactoryFK7427.create())
+              .build();
 
-      final var element = certificate.elementData().stream()
-          .filter(elementData -> elementData.id().equals(new ElementId("62.6")))
-          .findFirst()
-          .orElseThrow();
+      final var element =
+          certificate.elementData().stream()
+              .filter(elementData -> elementData.id().equals(new ElementId("62.6")))
+              .findFirst()
+              .orElseThrow();
 
-      final var elementData = element.withValue(
-          ElementValueDateRange.builder()
-              .id(new FieldId("62.6"))
-              .fromDate(LocalDate.now())
-              .build()
-      );
+      final var elementData =
+          element.withValue(
+              ElementValueDateRange.builder()
+                  .id(new FieldId("62.6"))
+                  .fromDate(LocalDate.now())
+                  .build());
 
-      final var updatedElementData = certificate.elementData().stream()
-          .map(data -> data.id().equals(new ElementId("62.6")) ? elementData : data)
-          .toList();
+      final var updatedElementData =
+          certificate.elementData().stream()
+              .map(data -> data.id().equals(new ElementId("62.6")) ? elementData : data)
+              .toList();
       certificate.updateData(updatedElementData, new Revision(0), ACTION_EVALUATION);
 
       final var xml = generator.generate(certificate, false);
-      assertFalse(schematronValidator.validate(certificate.id(), xml,
-          CertificateModelFactoryFK7427.SCHEMATRON_PATH));
+      assertFalse(
+          schematronValidator.validate(
+              certificate.id(), xml, CertificateModelFactoryFK7427.SCHEMATRON_PATH));
     }
 
     @Test
     void shallReturnFalseIfMissingFromValue() {
-      final var certificate = TestDataCertificate.fk7427CertificateBuilder()
-          .certificateModel(certificateModelFactoryFK7427.create())
-          .build();
+      final var certificate =
+          TestDataCertificate.fk7427CertificateBuilder()
+              .certificateModel(certificateModelFactoryFK7427.create())
+              .build();
 
-      final var element = certificate.elementData().stream()
-          .filter(elementData -> elementData.id().equals(new ElementId("62.6")))
-          .findFirst()
-          .orElseThrow();
+      final var element =
+          certificate.elementData().stream()
+              .filter(elementData -> elementData.id().equals(new ElementId("62.6")))
+              .findFirst()
+              .orElseThrow();
 
-      final var elementData = element.withValue(
-          ElementValueDateRange.builder()
-              .id(new FieldId("62.6"))
-              .toDate(LocalDate.now())
-              .build()
-      );
+      final var elementData =
+          element.withValue(
+              ElementValueDateRange.builder()
+                  .id(new FieldId("62.6"))
+                  .toDate(LocalDate.now())
+                  .build());
 
-      final var updatedElementData = certificate.elementData().stream()
-          .map(data -> data.id().equals(new ElementId("62.6")) ? elementData : data)
-          .toList();
+      final var updatedElementData =
+          certificate.elementData().stream()
+              .map(data -> data.id().equals(new ElementId("62.6")) ? elementData : data)
+              .toList();
       certificate.updateData(updatedElementData, new Revision(0), ACTION_EVALUATION);
 
       final var xml = generator.generate(certificate, false);
-      assertFalse(schematronValidator.validate(certificate.id(), xml,
-          CertificateModelFactoryFK7427.SCHEMATRON_PATH));
+      assertFalse(
+          schematronValidator.validate(
+              certificate.id(), xml, CertificateModelFactoryFK7427.SCHEMATRON_PATH));
     }
 
     @Test
     void shallReturnFalseIfInvalidDateRange() {
-      final var certificate = TestDataCertificate.fk7427CertificateBuilder()
-          .certificateModel(certificateModelFactoryFK7427.create())
-          .build();
+      final var certificate =
+          TestDataCertificate.fk7427CertificateBuilder()
+              .certificateModel(certificateModelFactoryFK7427.create())
+              .build();
 
-      final var element = certificate.elementData().stream()
-          .filter(elementData -> elementData.id().equals(new ElementId("62.6")))
-          .findFirst()
-          .orElseThrow();
+      final var element =
+          certificate.elementData().stream()
+              .filter(elementData -> elementData.id().equals(new ElementId("62.6")))
+              .findFirst()
+              .orElseThrow();
 
-      final var elementData = element.withValue(
-          ElementValueDateRange.builder()
-              .id(new FieldId("62.6"))
-              .fromDate(LocalDate.of(2023, 12, 31))
-              .toDate(LocalDate.of(2023, 1, 1))
-              .build()
-      );
+      final var elementData =
+          element.withValue(
+              ElementValueDateRange.builder()
+                  .id(new FieldId("62.6"))
+                  .fromDate(LocalDate.of(2023, 12, 31))
+                  .toDate(LocalDate.of(2023, 1, 1))
+                  .build());
 
-      final var updatedElementData = certificate.elementData().stream()
-          .map(data -> data.id().equals(new ElementId("62.6")) ? elementData : data)
-          .toList();
+      final var updatedElementData =
+          certificate.elementData().stream()
+              .map(data -> data.id().equals(new ElementId("62.6")) ? elementData : data)
+              .toList();
       certificate.updateData(updatedElementData, new Revision(0), ACTION_EVALUATION);
 
       final var xml = generator.generate(certificate, false);
-      assertFalse(schematronValidator.validate(certificate.id(), xml,
-          CertificateModelFactoryFK7427.SCHEMATRON_PATH));
+      assertFalse(
+          schematronValidator.validate(
+              certificate.id(), xml, CertificateModelFactoryFK7427.SCHEMATRON_PATH));
     }
   }
 
@@ -389,87 +443,99 @@ public class SchematronValidationFK7427Test {
 
     @Test
     void shallReturnFalseIfMissingToValue() {
-      final var certificate = TestDataCertificate.fk7427CertificateBuilder()
-          .certificateModel(certificateModelFactoryFK7427.create())
-          .build();
+      final var certificate =
+          TestDataCertificate.fk7427CertificateBuilder()
+              .certificateModel(certificateModelFactoryFK7427.create())
+              .build();
 
-      final var element = certificate.elementData().stream()
-          .filter(elementData -> elementData.id().equals(new ElementId("62.2")))
-          .findFirst()
-          .orElseThrow();
+      final var element =
+          certificate.elementData().stream()
+              .filter(elementData -> elementData.id().equals(new ElementId("62.2")))
+              .findFirst()
+              .orElseThrow();
 
-      final var elementData = element.withValue(
-          ElementValueDateRange.builder()
-              .id(new FieldId("62.2"))
-              .fromDate(LocalDate.now())
-              .build()
-      );
+      final var elementData =
+          element.withValue(
+              ElementValueDateRange.builder()
+                  .id(new FieldId("62.2"))
+                  .fromDate(LocalDate.now())
+                  .build());
 
-      final var updatedElementData = certificate.elementData().stream()
-          .map(data -> data.id().equals(new ElementId("62.2")) ? elementData : data)
-          .toList();
+      final var updatedElementData =
+          certificate.elementData().stream()
+              .map(data -> data.id().equals(new ElementId("62.2")) ? elementData : data)
+              .toList();
       certificate.updateData(updatedElementData, new Revision(0), ACTION_EVALUATION);
 
       final var xml = generator.generate(certificate, false);
-      assertFalse(schematronValidator.validate(certificate.id(), xml,
-          CertificateModelFactoryFK7427.SCHEMATRON_PATH));
+      assertFalse(
+          schematronValidator.validate(
+              certificate.id(), xml, CertificateModelFactoryFK7427.SCHEMATRON_PATH));
     }
 
     @Test
     void shallReturnFalseIfMissingFromValue() {
-      final var certificate = TestDataCertificate.fk7427CertificateBuilder()
-          .certificateModel(certificateModelFactoryFK7427.create())
-          .build();
+      final var certificate =
+          TestDataCertificate.fk7427CertificateBuilder()
+              .certificateModel(certificateModelFactoryFK7427.create())
+              .build();
 
-      final var element = certificate.elementData().stream()
-          .filter(elementData -> elementData.id().equals(new ElementId("62.2")))
-          .findFirst()
-          .orElseThrow();
+      final var element =
+          certificate.elementData().stream()
+              .filter(elementData -> elementData.id().equals(new ElementId("62.2")))
+              .findFirst()
+              .orElseThrow();
 
-      final var elementData = element.withValue(
-          ElementValueDateRange.builder()
-              .id(new FieldId("62.2"))
-              .toDate(LocalDate.now())
-              .build()
-      );
+      final var elementData =
+          element.withValue(
+              ElementValueDateRange.builder()
+                  .id(new FieldId("62.2"))
+                  .toDate(LocalDate.now())
+                  .build());
 
-      final var updatedElementData = certificate.elementData().stream()
-          .map(data -> data.id().equals(new ElementId("62.2")) ? elementData : data)
-          .toList();
+      final var updatedElementData =
+          certificate.elementData().stream()
+              .map(data -> data.id().equals(new ElementId("62.2")) ? elementData : data)
+              .toList();
       certificate.updateData(updatedElementData, new Revision(0), ACTION_EVALUATION);
 
       final var xml = generator.generate(certificate, false);
-      assertFalse(schematronValidator.validate(certificate.id(), xml,
-          CertificateModelFactoryFK7427.SCHEMATRON_PATH));
+      assertFalse(
+          schematronValidator.validate(
+              certificate.id(), xml, CertificateModelFactoryFK7427.SCHEMATRON_PATH));
     }
 
     @Test
     void shallReturnFalseIfInvalidDateRange() {
-      final var certificate = TestDataCertificate.fk7427CertificateBuilder()
-          .certificateModel(certificateModelFactoryFK7427.create())
-          .build();
+      final var certificate =
+          TestDataCertificate.fk7427CertificateBuilder()
+              .certificateModel(certificateModelFactoryFK7427.create())
+              .build();
 
-      final var element = certificate.elementData().stream()
-          .filter(elementData -> elementData.id().equals(new ElementId("62.2")))
-          .findFirst()
-          .orElseThrow();
+      final var element =
+          certificate.elementData().stream()
+              .filter(elementData -> elementData.id().equals(new ElementId("62.2")))
+              .findFirst()
+              .orElseThrow();
 
-      final var elementData = element.withValue(
-          ElementValueDateRange.builder()
-              .id(new FieldId("62.2"))
-              .fromDate(LocalDate.of(2023, 12, 31))
-              .toDate(LocalDate.of(2023, 1, 1))
-              .build()
-      );
+      final var elementData =
+          element.withValue(
+              ElementValueDateRange.builder()
+                  .id(new FieldId("62.2"))
+                  .fromDate(LocalDate.of(2023, 12, 31))
+                  .toDate(LocalDate.of(2023, 1, 1))
+                  .build());
 
-      final var updatedElementData = certificate.elementData().stream()
-          .map(data -> data.id().equals(new ElementId("62.2")) ? elementData : data)
-          .toList();
+      final var updatedElementData =
+          certificate.elementData().stream()
+              .map(data -> data.id().equals(new ElementId("62.2")) ? elementData : data)
+              .toList();
       certificate.updateData(updatedElementData, new Revision(0), ACTION_EVALUATION);
 
       final var xml = generator.generate(certificate, false);
-      assertFalse(schematronValidator.validate(certificate.id(), xml,
-          CertificateModelFactoryFK7427.SCHEMATRON_PATH));
+      assertFalse(
+          schematronValidator.validate(
+              certificate.id(), xml, CertificateModelFactoryFK7427.SCHEMATRON_PATH));
     }
   }
 }
