@@ -1,3 +1,21 @@
+/*
+ * Copyright (C) 2026 Inera AB (http://www.inera.se)
+ *
+ * This file is part of sklintyg (https://github.com/sklintyg).
+ *
+ * sklintyg is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * sklintyg is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
 package se.inera.intyg.certificateservice.domain.certificatemodel.model;
 
 import java.util.Collections;
@@ -14,13 +32,11 @@ public class CertificateActionSpecification {
 
   CertificateActionType certificateActionType;
   Boolean enabled;
+  @Default List<Role> allowedRoles = Collections.emptyList();
+
   @Default
-  List<Role> allowedRoles = Collections.emptyList();
-  @Default
-  List<Role> allowedRolesForProtectedPersons = List.of(
-      Role.DOCTOR,
-      Role.PRIVATE_DOCTOR,
-      Role.DENTIST
-  );
+  List<Role> allowedRolesForProtectedPersons =
+      List.of(Role.DOCTOR, Role.PRIVATE_DOCTOR, Role.DENTIST);
+
   CertificateActionContentProvider contentProvider;
 }
